--- a/report.tex
+++ b/report.tex
@@ -112,7 +112,7 @@
 \section{Introduction}
 \subsection{General information}
     The assignment is solved by me, Artem Bakhanov, a student of Innopolis University. If you have any question regarding any part of this document and other provided materials, you can contact me via email: \href{mailto:a.bahanov@innopolis.university}{a.bahanov@innopolis.university}.\\
-    In this assignment, I used Python 3.7 as a programming language. Also OpenCV and Numpy were used to work with images easily and with high performance. For generating Voronoi polygons I used Scipy. All files with code are in directory \texttt{/code}.
+    In this assignment, I used Python 3.7 as a programming language. Also OpenCV and Numpy were used to work with images easily and with high performance. For generating Voronoi polygons I used Scipy. All files with code are in directory \texttt{/code}. Also, you can find it on my \href{https://github.com/artembakhanov/ComputerCanDoArt}{GitHub}.
 \subsection{Running the code}
 First of all, you need to install Python of version 3.7. Note, that the code was not tested on Python 3.8, I cannot guarantee it works on Python 3.8. Install dependencies with \texttt{pip install -r requirements.txt} (this command may vary on different OSs and computers). Then you can run \texttt{main.py} and it will generate some image. If you want another image or you want to change parameters - edit \texttt{main.py} file. 
 
