--- a/report.tex
+++ b/report.tex
@@ -117,7 +117,8 @@
 First of all, you need to install Python of version 3.7. Note, that the code was not tested on Python 3.8, I cannot guarantee it works on Python 3.8. Install dependencies with \texttt{pip install -r requirements.txt} (this command may vary on different OSs and computers). Then you can run \texttt{main.py} and it will generate some image. If you want another image or you want to change parameters - edit \texttt{main.py} file. 
 
 \section{The Story}
-In the beginning I had a lot of ideas which were about generating triangles or more complex polygons to recreate the original image. Initially, I created a program that did it but I did not like the result I got. I started researching and probing a lot. For now I created about 6 different algorithms and I was not satisfied with any of them. The problem was that it was too edgy and "sharp". The images I got were just inaccurate replica of the original images. So I decided that randomness in the figures is not cool and I remembered my internship in 2019 when I was creating an app that reconstructs 3d mesh. One of the task that I needed to solve - Voronoi Partition. This algorithm gives really beautiful images. I took the algorithm and I took one my idea from the previous algorithm - RGB splitting. My final program creates image out of 3 independent Voronoi Diagrams - each in separate color layer. And the result is interesting. It is structured and chaotic at the same time.
+In the beginning, I had a lot of ideas which were about generating triangles or more complex polygons to recreate the original image. Initially, I created a program that did it, but I did not like the result I got. I started researching and probing a lot. For now, I created about six different algorithms, and I was not satisfied with any of them. The problem was that it was too edgy and "sharp". The images I got were just inaccurate replica of the original images. So I decided that randomness in the figures is not cool, and I remembered my internship in 2019 when I was creating an app that reconstructs 3d mesh. One of the tasks that I needed to solve is Voronoi Partition. This algorithm gives wonderful images. I took the algorithm, and I took one my idea from the previous algorithm - RGB splitting. My final program creates an image out of 3 independent Voronoi Diagrams - each in a separate color layer. And the result is interesting. It is structured and chaotic at the same time.
+
 
 \section{Representation}
 This section is about representation of the algorithm.
@@ -164,13 +165,14 @@ In my code Image is represented as class with 3 layers - arrays of "centers" of 
      \caption{Generation 168842. Layers of the Image}
 \end{figure}
 \section{Population}
-This paragraph is about the size of population. I tested my algorithm on a big number of tests and I got to a conclusion: there is no need to generate more than 1 entity in one population. I tried to change a lot of parameters but it did not change the overall image and I can explain why it happens. My image is generated using polygons and the number of polygons are plus or minus is constant (the number can change because the Voronoi polygons can generate polygons that are impossible to draw). For this reason everytime we will get different images in genome but they will look very similar for a human eye. Yes, genotype is different but for humans only phenotype is important. Another problem was convergence of the population to one good result. I tried different techniques described in the following paragraphs but it did not yield any improvements. For this reason I did not use any crossover function. Every iteration (generation) two mutated kids are generated and selection algorithm is applied. The artistic results became better due to this improvement. Below you can see three images. two of them were generated using only mutations and one with population size = 10, 2 point crossover. The results (phehotypes) are very similar. Since I do not use any crossover function, I do not use parent selection algorithm. But I tried panmixis and random outbreeding. Random outbreeding was more effective in terms of generating diverse genotypes. But eventually the diversity of the genotype was really small (on big number of populations).
+This paragraph is about the size of the population. I tested my algorithm on a big number of tests, and I got to a conclusion: there is no need to generate more than one entity in one population. I tried to change a lot of parameters but it did not change the overall image, and I can explain why it happens. My image is generated using polygons, and the number of polygons is plus or minus constant (the number can change because the Voronoi polygons can create polygons that are impossible to draw). For this reason, every time we will get different images in the genome but they will look very similar for a human eye. Yes, the genotype is different but for humans only phenotype is important.
+Another problem was convergence of the population to one good result. I tried different techniques described in the following paragraphs but it did not yield any improvements. For this reason, I did not use any crossover function. Every iteration (generation) two mutated kids are generated and selection algorithm is applied. The artistic results became better due to this improvement. Below you can see three images. two of them were generated using only mutations and one with population size = 10 and 2 point crossover. The results (phenotypes) are very similar. Since I do not use any crossover function, I do not use parent selection algorithm. But I tried panmixis and random outbreeding. Random outbreeding was more effective in terms of generating diverse genotypes. But eventually, the diversity of the genotype was really small (on a big number of populations).
 \section{Selection Algorithm}
-My algorithm need to choose one individual out of several mutated individuals and one individual from the previous generation. My experiments showed that the best solution is truncation selection. The algorithm choose the best individual in terms of the results of the fitness function. 
+My algorithm needs to choose one individual out of several mutated individuals and one individual from the previous generation. My experiments showed that the best solution is the truncation selection. The algorithm chooses the best individual in terms of the results of the fitness function. 
 
 
 \section{Image Manipulations}
-I do not make any specific image manipulations. I read the image from the memory and do not change it. For the image reading and writing I used opencv library. When I generate image (for example I use it in the fitness function), I use cv2 drawing function \texttt{fillPoly}. Initially, I generate three empty (black) 1-channel images for each layer. Then I iteratively draw the polygons and then I merge the layers using \texttt{cv2.merge} function. 
+I do not make any specific image manipulations. I read the image from the memory and do not change it. For the image reading and writing I used opencv library. When I generate an image (for example I use it in the fitness function), I use cv2 drawing function \texttt{fillPoly}. Initially, I generate three empty (black) 1-channel images for each layer. Then I iteratively draw the polygons, and then I merge the layers using \texttt{cv2.merge} function. 
 
 \section{Fitness function}
 Fitness function I use is Mean Squared Error. Initially, I used \texttt{mean\_squared\_error} from \textbf{sklearn} but it was very slow. For this reason, I decided to optimize the fitness function. First of all, I started using \textbf{numba} for optimizing my code. I was forced to write my own mse function. Numba allows very nice optimizations for 1-dimensional arrays and for-loops. Overall I improved the performance in 16 times. Note: the smaller the value of fitness function - the better result.
@@ -193,7 +195,8 @@ Mutation has 100\% chance to happen. It is one point mutation: one layer is sele
 This probabilities were obtained during several experiments. I estimated performance time and the output image. These parameters seemed to me appropriate.
 
 \section{What is art for me?}
-Art is a very simple word and a very difficult concept. Every person can define it in their own way so some readers might not agree with in this paragraph. For me art is something that is created by a human, a machine, or even by an animal. It is created for conveying creator's feelings, experience which sometimes cannot be expressed using words. This feelings should be visible by a spectator, or audible by a listener, or even touchable. How the feelings of the creator are understood is also art. Everyone can see different things in some piece of art because they try to find the piece of themselves. They are co-authors. For some authors it is important that spectators feel what they wanted them to feel, some creators leave space for thoughts. Another import thing about art is that is not soullessly created. This is why a lot of people go to galleries or museums. Even if a piece of art is created by machine, someone put their heart into the program. It is also meaningful.
+Art is a simple word and a complicated concept. Every person can define it in their own way, so some readers might not agree with me in this paragraph. For me, art is something that is created by a human, a machine, or even by an animal. It is created for conveying creator's feelings, experiences which sometimes cannot be expressed using words. These feelings should be visible by a spectator, or audible by a listener, or sometimes even touchable. The way how the feelings of the creator are understood is also art. Everyone can see different things in some piece of art because they try to find a piece of themselves there. They are co-authors. For some authors, it is important that spectators feel what they wanted them to feel; some creators leave space for thoughts. Another important thing about art is that it is not soullessly created. That is why a lot of people go to galleries or museums nowadays. Even if a piece of art is created by a machine, someone put their heart into the program. It is also meaningful. \\
+All in all, for me, art is another way of expressing emotions.
 \section{Artistic Value}
 I treat images that are generated by my algorithm for several reasons.\\
 \textbf{Firstly}, an idea that 3 independent layers can create some meaningful image make me think about structure and chaos in the universe. Just think how you can represent the image, made it and the image will look how you want. It will be structured and chaotic at the same time (look at borders - they are "glitchy" but in a good way). \\
